tests/fixtures/flow/mermaid/negative/bidirectional_edge_executable.mmd
flowchart TD
A route_one@<--> B
